# zephyr-wireguard

./: README.md  zephyr-wireguard.yaml
include/zephyr/net/: wireguard.h
samples/net/wireguard/: CMakeLists.txt  README.rst  prj.conf
samples/net/wireguard/src/: main.c  wg.c
subsys/net/lib/shell/: wg.c
subsys/net/lib/wireguard/: CMakeLists.txt  Kconfig  wg.c  wg_crypto.c  wg_psa.c  wg_psa.h
subsys/net/lib/wireguard/crypto/: crypto.h
subsys/net/lib/wireguard/crypto/refc/: hchacha20.c  hchacha20.h
zephyr/: module.yml
